[project]
name = "poc-crewai"
version = "0.0.1"
description = ""
authors = [
    {name = "Mati",email = "mati@example.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "crewai (>=0.102.0,<0.103.0)"
]

[tool.poetry]
packages = [{include = "poc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
